--- a/src/template.html
+++ b/src/template.html
@@ -19,6 +19,11 @@
       rel="stylesheet"
     />
 
+    <script src="https://unpkg.com/dayjs@1.8.28/dayjs.min.js"></script>
+    <script src="https://unpkg.com/dayjs@1.8.28/locale/fr.js"></script>
+    <script>
+      dayjs.locale("fr");
+    </script>
     <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
